--- a/styles/style.css
+++ b/styles/style.css
@@ -186,7 +186,7 @@ h4 {
 
 h5 {
   font-size: 1rem;
-  margin-top: 3rem;
+  margin-top: 0.5rem;
   color: var(--h5-color);
 }
 
@@ -567,9 +567,9 @@ a:active {
 
 .global-footer {
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  margin: 0;
-  padding: 1rem;
+  padding: 2rem;
   background-color: var(--background-color-footer);
   text-align: center;
   border-top: 1px solid #f9f5ed;
@@ -989,11 +989,6 @@ a:active {
     gap: 2rem;
   }
 
-  .global-footer {
-    padding: 2rem 2rem 2rem 2rem;
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-
   .about-item-1 {
     grid-row: 1 / 3;
     grid-column: 1 / 2;
@@ -1044,10 +1039,10 @@ a:active {
   /* Padding around work grid and project page */
   .portfolio,
   .project-wrapper {
-    padding-top: 0.25rem;
-    padding-right: 0.25rem;
+    padding-top: 2rem;
+    padding-right: 2rem;
     padding-bottom: 0;
-    padding-left: 0.25rem;
+    padding-left: 2rem;
   }
 
   /* Project Page Flex Direction on Large Devices */
