--- a/styles/style.css
+++ b/styles/style.css
@@ -933,7 +933,7 @@ a:active {
     flex-direction: row;
     justify-content: center;
     gap: 1rem;
-    padding: 1rem;
+    padding-bottom: 1rem;
     margin: 0;
     flex-wrap: wrap;
   }
@@ -1020,7 +1020,7 @@ a:active {
 
   .about-content-col {
     order: 1;
-    padding: 2rem;
+    padding: 1rem;
     border-bottom: 1.5px #bcb73d;
   }
 
