--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,7 @@ img {
 */
 
 h1 {
-  font-size: 3.5rem !important;
+  font-size: 3rem !important;
   font-family: var(--heading-typeface);
   margin-bottom: 0.5rem;
   color: var(--h1-color);
@@ -179,8 +179,8 @@ h3 {
 }
 
 h4 {
-  font-size: 1rem;
-  margin-bottom: 0.5rem;
+  font-size: 0.75rem;
+  margin-bottom: 1.5rem;
   color: var(--h4-color);
 }
 
@@ -199,7 +199,7 @@ h6 {
 p {
   font-size: 1rem;
   line-height: 1.3;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 em {
@@ -583,7 +583,7 @@ a:active {
 .about-content-col {
   flex: 2; /* This takes up more space than the first column */
   padding-left: 0.5rem;
-  padding-right: 2.5rem;
+  padding-right: 3.5rem;
 }
 
 .about-title {
@@ -594,6 +594,23 @@ a:active {
   padding-bottom: 3rem;
 }
 
+.about-contact-list {
+  padding-bottom: 1rem;
+  font-style: #bcb73d;
+}
+
+.about-content-list {
+  padding-bottom: 2rem;
+}
+
+.about-services-list {
+  list-style-type: disc;
+  padding-left: 1.5rem;
+}
+
+.about-services-list li p {
+  margin: 0;
+}
 /* Global Footer
 
 ███████  ██████   ██████  ████████ ███████ ██████  
@@ -1020,12 +1037,12 @@ a:active {
 
   .about-content-col {
     order: 1;
-    padding: 0rem;
+    padding: 1rem;
     border-bottom: 1.5px #bcb73d;
   }
 
   .about-title {
-    padding-top: 1rem;
+    padding-top: 1.5rem;
     text-align: left;
     display: flex;
   }
