--- a/styles/style.css
+++ b/styles/style.css
@@ -494,11 +494,26 @@ a:active {
 }
 
 .project-page-grid-item {
-  position: relative;
   width: 100%;
   aspect-ratio: 4 / 3;
   overflow: hidden;
   display: block;
+  position: relative;
+}
+
+.project-grid {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.project-page-grid-item img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
 /* Overlay */
@@ -626,6 +641,7 @@ a:active {
   flex-direction: column;
   justify-content: center;
   padding: 2.5rem 2.5rem;
+  padding-bottom: 1rem;
   background-color: var(--background-color-footer);
   text-align: center;
   border-top: 1.5px solid #f9f5ed;
