--- a/styles/style.css
+++ b/styles/style.css
@@ -516,12 +516,13 @@ a:active {
 }
 
 .project-page-grid-item video {
-  width: 100%;
-  height: auto;
-  object-fit: cover; /* or 'contain' if you want the whole video visible */
-  max-width: auto;   /* match your image max-width if needed */
-  aspect-ratio: 3/2;  /* optional: force consistent shape */
-  border-radius: 8px; /* optional: match image corners */
+  width: 100%;               
+  height: auto;             
+  max-width: 1900px;        
+  object-fit: cover;
+  border-radius: 10px;
+  border: 1.5px solid #f2f2f2;
+  box-sizing: border-box;   
 }
 
 /* Overlay */
