--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,7 @@ img {
 */
 
 h1 {
-  font-size: 3rem !important;
+  font-size: 3.5rem !important;
   font-family: var(--heading-typeface);
   margin-bottom: 0.5rem;
   color: var(--h1-color);
@@ -191,7 +191,7 @@ h4 {
 }
 
 h5 {
-  font-size: 1rem;
+  font-size: .75rem;
   margin-top: 0.5rem;
   color: var(--h5-color);
 }
@@ -345,7 +345,7 @@ a:active {
   display: flex;
   flex-direction: column;
   padding-left: 2rem;
-  padding-right: 2rem;
+  padding-right: 3.5rem;
   padding-bottom: 1rem;
   flex: 1;
 }
@@ -766,21 +766,81 @@ a:active {
 .global-footer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding: 2.5rem 2.5rem;
-  padding-bottom: 1rem;
-  background-color: var(--background-color-footer);
-  text-align: center;
-  border-top: 1.5px solid #f9f5ed;
-  gap: 0.5rem;
   margin-top: auto;
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
+
+.footer-top-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding-top: 2.5rem;
+  padding-bottom: 1.5rem;
+  border-top: 1.5px solid #f9f5ed;
+  flex-wrap: wrap;
+}
+
+.footer-info h1 {
+  margin: 0;
+}
+
+.footer-info h3 {
+  margin-top: 0.75rem;
+  font-weight: normal;
+}
+
+.footer-info a {
+  text-decoration: none;
+  color: inherit;
+  transition: color 0.2s ease-in-out;
+}
+
+.footer-info a:hover {
+  color: #bcb73d;
+}
+
+/* Back-to-top button styles */
+.footer-button {
+  display: flex;
+  align-items: center;
+}
+
+.back-to-top {
+  background-color: transparent;
+  text-decoration: none;
+  padding: 0.4rem 0.75rem;
+  transition: all 0.2s ease;
+    color: #f9f5ed;
+}
+
+
+.back-to-top:hover {
+  color: #bcb73d;
 }
 
 .copyright {
-  margin: 0;
-  color: var(--primary-text-color);
+  padding: 1rem 0rem;
+  border-top: 1px solid #f9f5ed;
 }
 
+.copyright h5 {
+  color: #f9f5ed;
+  margin: 0;
+}
+
+.copyright-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* SVG Icon beside copyright */
+.copyright-icon {
+  height: 1.3em;      
+  width: auto;
+  filter: invert(95%) sepia(7%) saturate(149%) hue-rotate(5deg) brightness(110%) contrast(100%);
+}
 /* Project Page 
 
 ██████  ██████   ██████       ██ ███████  ██████ ████████     ██████   █████   ██████  ███████ 
@@ -807,7 +867,7 @@ a:active {
   height: 100vh;
   flex-shrink: 0;
   display: flex;
-  padding-left: 2.5rem;
+  padding-left: 3.5rem;
   padding-top: 2.5rem;
   padding-bottom: 3rem;
   flex-direction: column;
@@ -816,7 +876,8 @@ a:active {
 }
 
 .project-info {
-  padding-bottom: 30rem;
+  padding-bottom: 28rem;
+  padding-top: 2rem;
 }
 
 .portfolio-navigation {
@@ -1040,9 +1101,9 @@ a:active {
 
 /* For mobile */
 @media (max-width: 768px) {
-  /* Footer Adjustments */
+ 
   .global-footer {
-    flex-direction: column; /* Stack items vertically on mobile */
+    flex-direction: column; 
     padding: 2rem;
 
     text-align: center;
@@ -1051,9 +1112,7 @@ a:active {
   .project-wrapper {
     padding: 1rem;
   }
-  /* Hide desktop navigation when mobile menu is active */
 
-  /* Sidebar Adjustments */
   .project-aside {
     width: 100%;
     text-align: center;
@@ -1328,7 +1387,7 @@ a:active {
   /* Padding around work grid and project page */
   .portfolio {
     padding-left: 2.5rem;
-    padding-right: 2.5rem;
+    padding-right: 3.5rem;
     padding-bottom: 2.5rem;
     border-left: 1.5px solid #f9f5ed;
   }
