--- a/styles/style.css
+++ b/styles/style.css
@@ -120,6 +120,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  
 }
 /* The ::selection CSS pseudo-element applies styles to the part of a document that has been highlighted by the user (such as clicking and dragging the mouse across text). */
 
@@ -164,13 +165,16 @@ h1 {
   color: var(--h1-color);
 }
 
+/*<!--[Project categorys]-->*/
 h2 {
-  font-size: 1.25rem !important;
+  font-size: 1.5rem !important;
   font-family: var(--body-typeface);
   margin-bottom: 1rem;
+  line-height: 1.5rem;
   color: var(--h2-color);
 }
 
+/*<!--[Subheadings & Menu Buttons]-->*/
 h3 {
   font-size: 1.5rem !important;
   margin-bottom: 1rem;
@@ -178,18 +182,15 @@ h3 {
   color: var(--h3-color);
 }
 
-h7 {
-  font-size: 1.5rem !important;
-  line-height: 1.5rem;
-  color: var(--h3-color);
-}
-
+/*<!--[About and Subheadings]-->*/
 h4 {
-  font-size: 0.75rem;
-  margin-bottom: 1.5rem;
+  font-size: 2.5rem;
+  margin-bottom: 1.75rem;
+  line-height: 3rem;
   color: var(--h4-color);
 }
 
+/*<!--[Copyright & About Dates]-->*/
 h5 {
   font-size: .75rem;
   margin-top: 0.5rem;
@@ -198,8 +199,7 @@ h5 {
 
 h6 {
   font-size: 1rem;
-  margin-bottom: 1rem;
-  color: var(--h6-color);
+  color: #bcb73d;
 }
 
 p {
@@ -409,7 +409,6 @@ a:active {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
   align-items: flex-start;
 }
 
@@ -463,6 +462,16 @@ a:active {
 .main-menu-item:hover .overlay {
   color: var(--second-accent-color);
   opacity: 1;
+}
+
+.custom-navigation {
+  color: inherit;
+  text-decoration: none;
+}
+
+/* Active link (current page) */
+.custom-navigation.active {
+  color: #bcb73d;
 }
 
 .socials-list {
@@ -620,6 +629,13 @@ a:active {
   margin-top: auto;
 }
 
+.project-category-list-2 {
+ display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: auto;
+  background-color: #f9f5ed;
+}
 .project-stella-category {
   max-width: fit-content;
   border-radius: 9rem;
@@ -694,65 +710,87 @@ a:active {
 ██   ██ ██████   ██████   ██████     ██    
                                            
 */
-
 .about {
   display: flex;
-  flex: 1;
-  width: 75%;
-  background: var(--background-color-about);
-  min-height: 100vh;
-  list-style: none;
-  gap: 0rem; /* Adds space between columns */
+  flex-direction: column;
+  width: 100%;
+  padding-right: 15rem;
   padding-top: 2.5rem;
 }
 
-/* Column 1: Profile Image */
-.about-item-1 {
-  flex: 0 1 20%; /* The first number is the flex-grow, the second is flex-shrink, and the third is the flex-basis */
+.about-content {
   border-left: 1.5px solid #f9f5ed;
-  border-right: 1.5px solid #bcb73d;
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
 }
 
-/* The image will be centered in its container */
-.about-image {
+main.about {
+  flex: 1;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between; 
 }
 
-/* Column 2: Main content */
-.about-content-col {
-  flex: 2; /* This takes up more space than the first column */
-  padding-left: 0.5rem;
-  padding-right: 3.5rem;
+/* ABOUT TOP */
+.about-content-top {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 5rem;
+  padding-left: 2.5rem;
+  padding-bottom: 4rem;
 }
 
-.about-title {
-  padding-bottom: 1rem;
+.about-image {
+  flex: 1 1 40%;
+  max-width: 450px;
+  border: 2px solid #bcb73d;
+  border-radius: 1.5rem;
+  overflow: hidden;
 }
 
 .about-bio {
-  padding-bottom: 3rem;
+  flex: 1 1 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 1.5rem;
+  padding-top: 2rem;
 }
 
 .about-contact-list {
-  padding-bottom: 1rem;
-  font-style: #bcb73d;
+  margin-top: 3rem;
 }
 
-.about-content-list {
-  padding-bottom: 2rem;
+.green-link {
+  text-decoration: underline !important;
 }
 
-.about-services-list {
-  list-style-type: disc;
-  padding-left: 1.5rem;
+.green-link:hover {
+  text-decoration: none;
+  color: #bcb73d;
 }
 
-.about-services-list li p {
-  margin: 0;
+/* ABOUT BOTTOM */
+.about-content-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 2rem;
+  flex-wrap: wrap;
+  padding-left: 2.5rem;
+  padding-bottom: 2.5rem;
 }
+
+.about-services-education,
+.about-experience-featured {
+  flex: 1 1 48%;
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+}
+
 /* Global Footer
 
 ███████  ██████   ██████  ████████ ███████ ██████  
@@ -776,7 +814,7 @@ a:active {
   justify-content: space-between;
   align-items: flex-end;
   padding-top: 2.5rem;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1rem;
   border-top: 1.5px solid #f9f5ed;
   flex-wrap: wrap;
 }
@@ -820,8 +858,7 @@ a:active {
 }
 
 .copyright {
-  padding: 1rem 0rem;
-  border-top: 1px solid #f9f5ed;
+  padding-bottom: 1rem;
 }
 
 .copyright h5 {
@@ -837,7 +874,7 @@ a:active {
 
 /* SVG Icon beside copyright */
 .copyright-icon {
-  height: 1.3em;      
+  height: 1.1em;      
   width: auto;
   filter: invert(95%) sepia(7%) saturate(149%) hue-rotate(5deg) brightness(110%) contrast(100%);
 }
@@ -877,7 +914,7 @@ a:active {
 
 .project-info {
   padding-bottom: 28rem;
-  padding-top: 2rem;
+  padding-top: 3.5rem;
 }
 
 .portfolio-navigation {
@@ -1232,23 +1269,22 @@ a:active {
     width: 100%;
   }
 
-  .about-item-1 {
-    order: 2; /* Move to after the content-col */
-    border: none;
-    padding-top: 2rem;
-  }
-
-  .about-content-col {
-    order: 1;
-    padding: 1rem;
-    border-bottom: 1.5px #bcb73d;
-  }
 
   .about-title {
     padding-top: 1.5rem;
     text-align: left;
     display: flex;
   }
+
+  .about-content-bottom {
+    flex-direction: column;
+  }
+
+  .about-services-education,
+  .about-experience-featured {
+    flex: 1 1 100%;
+  }
+}
 
   .hero {
     padding: 1rem; /* Reduce padding */
@@ -1266,14 +1302,13 @@ a:active {
 
   .branding-navigation {
     flex-direction: column; /* Stack branding and nav items */
-    align-items: center;
-    text-align: center;
+    align-items: start;
+    text-align: left;
     padding-bottom: 0rem;
   }
   .logo-svg {
     padding-bottom: 1.5rem;
   }
-}
 
 /* Medium devices (tablets, 768px and up) */
 
