--- a/styles/style.css
+++ b/styles/style.css
@@ -1174,7 +1174,11 @@ main.about {
 @media (max-width: 768px) {
  
   h1 {
-    font-size: 2rem !important;
+    font-size: 1.75rem !important;
+  }
+
+  h3 {
+    font-size: 1.25rem !important;
   }
 
   /* Footer layout for mobile */
@@ -1199,7 +1203,7 @@ main.about {
   .footer-info { 
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0rem;
     align-items: center;
   }
 
@@ -1321,11 +1325,27 @@ main.about {
     padding-right: 0rem;
   }
 
+  .project-description-content {
+  flex-direction: column;
+  align-items: left;
+  }
+
+    .project-description-heading {
+ padding-left: 0rem;
+ width: 100%;
+  }
+
+  .project-description-body {
+ padding-left: 0rem;
+ padding-top: 1rem;
+ width: 100%;
+  }
+
   .project-title {
     width: 100%;
     padding-left: 0;
     padding-right: 0;
-    padding-top: 1rem;
+    padding-top: 0rem;
   }
 
   .logo {
@@ -1338,6 +1358,7 @@ main.about {
     align-self: center;
     width: 100%;
     border-left: none;
+    padding-top: 2rem;
   }
 
   .about-wrapper {
